# Agentability

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMERCIAL.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  build_platform.py  package-lock.json  pyproject.toml  requirements.txt  seed_demo.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dashboard.yml  release.yml  stale.yml
agentability_api/: __init__.py  dependencies.py  main.py
agentability_api/routers/: __init__.py  decisions.py  health.py  metrics.py
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/charts/: Charts.tsx
dashboard/src/components/layout/: Sidebar.tsx  TopBar.tsx
dashboard/src/components/ui/: Card.tsx
dashboard/src/hooks/: useApi.ts
dashboard/src/pages/: Agents.tsx  Conflicts.tsx  Cost.tsx  Decisions.tsx  Overview.tsx
dashboard/src/services/: api.ts
dashboard/src/types/: index.ts
dashboard/src/utils/: format.ts
docs/: README.md
platform/: .env.example  __init__.py  requirements.txt
platform/api/: main.py  schemas.py
platform/api/routers/: agents.py  alerts.py  conflicts.py  decisions.py
scripts/: release.sh
sdk/python/agentability/: __init__.py  async_tracer.py  models.py  tracer.py
sdk/python/agentability/analyzers/: __init__.py  causal_graph.py  conflict_analyzer.py  cost_analyzer.py  drift_detector.py  lineage_tracer.py  provenance.py
sdk/python/agentability/capability/: __init__.py  scorer.py
sdk/python/agentability/integrations/: __init__.py  anthropic_sdk.py  autogen.py  crewai.py  langchain.py  langgraph.py  llamaindex.py  openai_agents.py
sdk/python/agentability/memory/: __init__.py  episodic_tracker.py  semantic_tracker.py  working_tracker.py
sdk/python/agentability/metrics/: __init__.py  conflict_metrics.py  decision_metrics.py  llm_metrics.py  memory_metrics.py
sdk/python/agentability/policies/: __init__.py  evaluator.py
sdk/python/agentability/sampling/: __init__.py  samplers.py
sdk/python/agentability/storage/: __init__.py  sqlite_store.py
sdk/python/agentability/utils/: __init__.py  logger.py  serialization.py  validation.py
sdk/python/agentability/versioning/: __init__.py  version_tracker.py
sdk/python/examples/: basic_usage.py  demo_runner.py  multi_agent_system.py  rag_example.py  seed_demo.py
sdk/python/tests/: __init__.py  test_analyzers.py  test_coverage_boost.py  test_integrations.py  test_memory.py  test_metrics.py  test_models.py  test_sqlite_store.py  test_tracer.py  test_utils.py  test_v030_features.py
